# Anyq

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  USAGE.md  docker-compose.yml  pyproject.toml
docker/searxng/: Dockerfile  entrypoint.sh  limiter.toml  settings.yml
docker/tor/: Dockerfile
frontend/: index.html
src/anyq/: config.py  main.py  pipeline.py
src/anyq/api/routes/: check.py  jobs.py  results.py
src/anyq/extractors/: tfidf.py
src/anyq/jobs/: storage.py
src/anyq/parsers/: base.py  docx.py  factory.py  pdf.py  txt.py
src/anyq/query_gen/: llm.py  rule_based.py
src/anyq/search/: orchestrator.py  proxy_pool.py  searxng.py  ua_pool.py
